--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body class="boot-active">
+
+    <!-- Boot Screen -->
     <div id="boot-screen">
         <div class="boot-logo">BLK-OS</div>
         <div class="boot-text">Initializing system...</div>
@@ -15,12 +18,14 @@
         </div>
     </div>
 
+    <!-- Main App -->
     <div id="app" class="hidden">
         <header class="top-bar">
             <div class="brand">
                 <span class="brand-logo">BLK</span>
                 <span class="brand-name">BLK-OS</span>
             </div>
+
             <div class="top-actions">
                 <button id="diagnosticsBtn" class="btn-ghost">Diagnostics</button>
                 <button id="adminBtn" class="btn-primary" onclick="window.location.href='admin.html'">Admin</button>
@@ -28,6 +33,8 @@
         </header>
 
         <main class="main-layout">
+
+            <!-- Sidebar -->
             <section class="sidebar">
                 <div class="panel">
                     <h2>Search</h2>
@@ -55,6 +62,7 @@
                 </div>
             </section>
 
+            <!-- Main Content -->
             <section class="content">
                 <div class="panel">
                     <h2>Featured</h2>
@@ -69,12 +77,11 @@
 
                 <div class="panel">
                     <h2>All Games</h2>
-                    <div id="gamesGrid" class="games-grid">
-                        <!-- Games injected by JS -->
-                    </div>
+                    <div id="gamesGrid" class="games-grid"></div>
                 </div>
             </section>
 
+            <!-- Right Sidebar -->
             <aside class="rightbar">
                 <div class="panel">
                     <h2>Recently Played</h2>
@@ -94,6 +101,7 @@
                     </div>
                 </div>
             </aside>
+
         </main>
     </div>
 
